src/main/java/parser/ValidatorParser.java
// Generated from D:/workspace/json-validator/src/main/java/parser\ValidatorParser.g4 by ANTLR 4.10.1
package parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ValidatorParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		VALIDATOR=1, VALIDATOR_LPAREN=2, VALIDATOR_WS=3, VALIDATOR_RPAREN=4, STEP=5, 
		STEP_STRING=6, STEP_LPAREN=7, STEP_RPAREN=8, STEP_START_EXPR=9, STEP_WS=10, 
		STEP_END_EXPR=11, EXPR_STRING=12, EXPR_GET=13, EXPR_PATH_LPAREN=14, EXPR_PATH_RPAREN=15, 
		STEP_START_MESSAGE=16, STEP_START_COMPLEX_MESSAGE=17, EXPR_COMPOSITION_AND=18, 
		EXPR_COMPOSITION_OR=19, OP_EQUAL=20, OP_NOT_EQUAL=21, OP_NOT=22, OP_IS=23, 
		OP_CONTAINS=24, OP_OF=25, OPND_NULL=26, OPND_EMPTY=27, OPND_ARRAY_START=28, 
		OPND_ARRAY_END=29, OPND_ARRAY_COMMA=30, OPND_NUMBER=31, OPND_TRUE=32, 
		OPND_FALSE=33, OPND_BOOLEAN=34, QUANTIFIER_ALL=35, QUANTIFIER_ANY=36, 
		QUANTIFIER_ONE=37, ADDITIVE_IGNORE=38, ADDITIVE_CASE=39, EXPR_WS=40, STEP_END_COMPLEX_MESSAGE=41, 
		COMPLEX_MESSAGE_STRING=42, COMPLEX_WS=43, COMPLEX_MESSAGE_WHEN=44, COMPLEX_MESSAGE_VALID=45, 
		COMPLEX_MESSAGE_INVALID=46, COMPLEX_MESSAGE_COLON=47, COMPLEX_MESSAGE_SEMICOLON=48;
	public static final int
		RULE_validator = 0, RULE_steps = 1, RULE_stepName = 2, RULE_expressions = 3, 
		RULE_expression = 4, RULE_atomicExpression = 5, RULE_path = 6, RULE_operations = 7, 
		RULE_equalityOperation = 8, RULE_numberEqualityOperation = 9, RULE_stringEqualityOperation = 10, 
		RULE_booleanEqualityOperation = 11, RULE_checkNullOperation = 12, RULE_checkEmptyOperation = 13, 
		RULE_containOperation = 14, RULE_containsScalar = 15, RULE_containsNumber = 16, 
		RULE_containsString = 17, RULE_containsNull = 18, RULE_containsAnyOf = 19, 
		RULE_containsAllOf = 20, RULE_selectOperation = 21, RULE_negate = 22, 
		RULE_number = 23, RULE_string = 24, RULE_boolean = 25, RULE_ignoreCase = 26, 
		RULE_array = 27, RULE_arrayElement = 28, RULE_numberElement = 29, RULE_stringElement = 30, 
		RULE_booleanElement = 31, RULE_nullElement = 32, RULE_messages = 33, RULE_invalidMessage = 34, 
		RULE_complexMessage = 35, RULE_complexMessageDetails = 36, RULE_complexMessageDeatilsWhenTrue = 37, 
		RULE_complexMessageDetailsWhenFalse = 38;
	private static String[] makeRuleNames() {
		return new String[] {
			"validator", "steps", "stepName", "expressions", "expression", "atomicExpression", 
			"path", "operations", "equalityOperation", "numberEqualityOperation", 
			"stringEqualityOperation", "booleanEqualityOperation", "checkNullOperation", 
			"checkEmptyOperation", "containOperation", "containsScalar", "containsNumber", 
			"containsString", "containsNull", "containsAnyOf", "containsAllOf", "selectOperation", 
			"negate", "number", "string", "boolean", "ignoreCase", "array", "arrayElement", 
			"numberElement", "stringElement", "booleanElement", "nullElement", "messages", 
			"invalidMessage", "complexMessage", "complexMessageDetails", "complexMessageDeatilsWhenTrue", 
			"complexMessageDetailsWhenFalse"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'validator'", null, null, null, "'step'", null, null, null, null, 
			null, null, null, "'get'", null, null, "'->'", null, "'and'", "'or'", 
			"'=='", "'!='", "'not'", "'is'", "'contains'", "'of'", "'null'", "'empty'", 
			null, null, null, null, "'true'", "'false'", null, "'all'", "'any'", 
			"'one'", "'ignore'", "'case'", null, null, null, null, "'when'", "'valid'", 
			"'invalid'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "VALIDATOR", "VALIDATOR_LPAREN", "VALIDATOR_WS", "VALIDATOR_RPAREN", 
			"STEP", "STEP_STRING", "STEP_LPAREN", "STEP_RPAREN", "STEP_START_EXPR", 
			"STEP_WS", "STEP_END_EXPR", "EXPR_STRING", "EXPR_GET", "EXPR_PATH_LPAREN", 
			"EXPR_PATH_RPAREN", "STEP_START_MESSAGE", "STEP_START_COMPLEX_MESSAGE", 
			"EXPR_COMPOSITION_AND", "EXPR_COMPOSITION_OR", "OP_EQUAL", "OP_NOT_EQUAL", 
			"OP_NOT", "OP_IS", "OP_CONTAINS", "OP_OF", "OPND_NULL", "OPND_EMPTY", 
			"OPND_ARRAY_START", "OPND_ARRAY_END", "OPND_ARRAY_COMMA", "OPND_NUMBER", 
			"OPND_TRUE", "OPND_FALSE", "OPND_BOOLEAN", "QUANTIFIER_ALL", "QUANTIFIER_ANY", 
			"QUANTIFIER_ONE", "ADDITIVE_IGNORE", "ADDITIVE_CASE", "EXPR_WS", "STEP_END_COMPLEX_MESSAGE", 
			"COMPLEX_MESSAGE_STRING", "COMPLEX_WS", "COMPLEX_MESSAGE_WHEN", "COMPLEX_MESSAGE_VALID", 
			"COMPLEX_MESSAGE_INVALID", "COMPLEX_MESSAGE_COLON", "COMPLEX_MESSAGE_SEMICOLON"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ValidatorParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ValidatorParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ValidatorContext extends ParserRuleContext {
		public TerminalNode VALIDATOR() { return getToken(ValidatorParser.VALIDATOR, 0); }
		public TerminalNode VALIDATOR_LPAREN() { return getToken(ValidatorParser.VALIDATOR_LPAREN, 0); }
		public StepsContext steps() {
			return getRuleContext(StepsContext.class,0);
		}
		public TerminalNode VALIDATOR_RPAREN() { return getToken(ValidatorParser.VALIDATOR_RPAREN, 0); }
		public TerminalNode EOF() { return getToken(ValidatorParser.EOF, 0); }
		public ValidatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_validator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValidatorParserListener ) ((ValidatorParserListener)listener).enterValidator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValidatorParserListener ) ((ValidatorParserListener)listener).exitValidator(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValidatorParserVisitor ) return ((ValidatorParserVisitor<? extends T>)visitor).visitValidator(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ValidatorContext validator() throws RecognitionException {
		ValidatorContext _localctx = new ValidatorContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_validator);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(VALIDATOR);
			setState(79);
			match(VALIDATOR_LPAREN);
			setState(80);
			steps();
			setState(81);
			match(VALIDATOR_RPAREN);
			setState(82);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StepsContext extends ParserRuleContext {
		public TerminalNode STEP() { return getToken(ValidatorParser.STEP, 0); }
		public StepNameContext stepName() {
			return getRuleContext(StepNameContext.class,0);
		}
		public TerminalNode STEP_START_EXPR() { return getToken(ValidatorParser.STEP_START_EXPR, 0); }
		public ExpressionsContext expressions() {
			return getRuleContext(ExpressionsContext.class,0);
		}
		public MessagesContext messages() {
			return getRuleContext(MessagesContext.class,0);
		}
		public TerminalNode STEP_END_EXPR() { return getToken(ValidatorParser.STEP_END_EXPR, 0); }
		public StepsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_steps; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValidatorParserListener ) ((ValidatorParserListener)listener).enterSteps(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValidatorParserListener ) ((ValidatorParserListener)listener).exitSteps(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValidatorParserVisitor ) return ((ValidatorParserVisitor<? extends T>)visitor).visitSteps(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StepsContext steps() throws RecognitionException {
		StepsContext _localctx = new StepsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_steps);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(STEP);
			setState(85);
			stepName();
			setState(86);
			match(STEP_START_EXPR);
			setState(87);
			expressions();
			setState(90);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case STEP_START_MESSAGE:
			case STEP_START_COMPLEX_MESSAGE:
				{
				setState(88);
				messages();
				}
				break;
			case STEP_END_EXPR:
				{
				setState(89);
				match(STEP_END_EXPR);
				}
				break;
			case VALIDATOR_RPAREN:
				break;
			default:
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StepNameContext extends ParserRuleContext {
		public TerminalNode STEP_STRING() { return getToken(ValidatorParser.STEP_STRING, 0); }
		public StepNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stepName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValidatorParserListener ) ((ValidatorParserListener)listener).enterStepName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValidatorParserListener ) ((ValidatorParserListener)listener).exitStepName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValidatorParserVisitor ) return ((ValidatorParserVisitor<? extends T>)visitor).visitStepName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StepNameContext stepName() throws RecognitionException {
		StepNameContext _localctx = new StepNameContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_stepName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(STEP_STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionsContext extends ParserRuleContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<TerminalNode> EXPR_COMPOSITION_OR() { return getTokens(ValidatorParser.EXPR_COMPOSITION_OR); }
		public TerminalNode EXPR_COMPOSITION_OR(int i) {
			return getToken(ValidatorParser.EXPR_COMPOSITION_OR, i);
		}
		public ExpressionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValidatorParserListener ) ((ValidatorParserListener)listener).enterExpressions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValidatorParserListener ) ((ValidatorParserListener)listener).exitExpressions(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValidatorParserVisitor ) return ((ValidatorParserVisitor<? extends T>)visitor).visitExpressions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionsContext expressions() throws RecognitionException {
		ExpressionsContext _localctx = new ExpressionsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_expressions);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			expression();
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==EXPR_COMPOSITION_OR) {
				{
				{
				setState(95);
				match(EXPR_COMPOSITION_OR);
				setState(96);
				expression();
				}
				}
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public List<AtomicExpressionContext> atomicExpression() {
			return getRuleContexts(AtomicExpressionContext.class);
		}
		public AtomicExpressionContext atomicExpression(int i) {
			return getRuleContext(AtomicExpressionContext.class,i);
		}
		public List<TerminalNode> EXPR_COMPOSITION_AND() { return getTokens(ValidatorParser.EXPR_COMPOSITION_AND); }
		public TerminalNode EXPR_COMPOSITION_AND(int i) {
			return getToken(ValidatorParser.EXPR_COMPOSITION_AND, i);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValidatorParserListener ) ((ValidatorParserListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValidatorParserListener ) ((ValidatorParserListener)listener).exitExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValidatorParserVisitor ) return ((ValidatorParserVisitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_expression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			atomicExpression();
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==EXPR_COMPOSITION_AND) {
				{
				{
				setState(103);
				match(EXPR_COMPOSITION_AND);
				setState(104);
				atomicExpression();
				}
				}
				setState(109);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AtomicExpressionContext extends ParserRuleContext {
		public TerminalNode EXPR_GET() { return getToken(ValidatorParser.EXPR_GET, 0); }
		public TerminalNode EXPR_PATH_LPAREN() { return getToken(ValidatorParser.EXPR_PATH_LPAREN, 0); }
		public PathContext path() {
			return getRuleContext(PathContext.class,0);
		}
		public TerminalNode EXPR_PATH_RPAREN() { return getToken(ValidatorParser.EXPR_PATH_RPAREN, 0); }
		public OperationsContext operations() {
			return getRuleContext(OperationsContext.class,0);
		}
		public ExpressionsContext expressions() {
			return getRuleContext(ExpressionsContext.class,0);
		}
		public AtomicExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atomicExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValidatorParserListener ) ((ValidatorParserListener)listener).enterAtomicExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValidatorParserListener ) ((ValidatorParserListener)listener).exitAtomicExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValidatorParserVisitor ) return ((ValidatorParserVisitor<? extends T>)visitor).visitAtomicExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AtomicExpressionContext atomicExpression() throws RecognitionException {
		AtomicExpressionContext _localctx = new AtomicExpressionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_atomicExpression);
		try {
			setState(120);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EXPR_GET:
				enterOuterAlt(_localctx, 1);
				{
				setState(110);
				match(EXPR_GET);
				setState(111);
				match(EXPR_PATH_LPAREN);
				setState(112);
				path();
				setState(113);
				match(EXPR_PATH_RPAREN);
				setState(114);
				operations();
				}
				break;
			case EXPR_PATH_LPAREN:
				enterOuterAlt(_localctx, 2);
				{
				setState(116);
				match(EXPR_PATH_LPAREN);
				setState(117);
				expressions();
				setState(118);
				match(EXPR_PATH_RPAREN);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PathContext extends ParserRuleContext {
		public TerminalNode EXPR_STRING() { return getToken(ValidatorParser.EXPR_STRING, 0); }
		public PathContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_path; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValidatorParserListener ) ((ValidatorParserListener)listener).enterPath(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValidatorParserListener ) ((ValidatorParserListener)listener).exitPath(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValidatorParserVisitor ) return ((ValidatorParserVisitor<? extends T>)visitor).visitPath(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PathContext path() throws RecognitionException {
		PathContext _localctx = new PathContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_path);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			match(EXPR_STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperationsContext extends ParserRuleContext {
		public EqualityOperationContext equalityOperation() {
			return getRuleContext(EqualityOperationContext.class,0);
		}
		public CheckNullOperationContext checkNullOperation() {
			return getRuleContext(CheckNullOperationContext.class,0);
		}
		public CheckEmptyOperationContext checkEmptyOperation() {
			return getRuleContext(CheckEmptyOperationContext.class,0);
		}
		public ContainOperationContext containOperation() {
			return getRuleContext(ContainOperationContext.class,0);
		}
		public SelectOperationContext selectOperation() {
			return getRuleContext(SelectOperationContext.class,0);
		}
		public OperationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operations; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValidatorParserListener ) ((ValidatorParserListener)listener).enterOperations(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValidatorParserListener ) ((ValidatorParserListener)listener).exitOperations(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValidatorParserVisitor ) return ((ValidatorParserVisitor<? extends T>)visitor).visitOperations(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OperationsContext operations() throws RecognitionException {
		OperationsContext _localctx = new OperationsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_operations);
		try {
			setState(129);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(124);
				equalityOperation();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(125);
				checkNullOperation();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(126);
				checkEmptyOperation();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(127);
				containOperation();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(128);
				selectOperation();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EqualityOperationContext extends ParserRuleContext {
		public NumberEqualityOperationContext numberEqualityOperation() {
			return getRuleContext(NumberEqualityOperationContext.class,0);
		}
		public StringEqualityOperationContext stringEqualityOperation() {
			return getRuleContext(StringEqualityOperationContext.class,0);
		}
		public BooleanEqualityOperationContext booleanEqualityOperation() {
			return getRuleContext(BooleanEqualityOperationContext.class,0);
		}
		public EqualityOperationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_equalityOperation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValidatorParserListener ) ((ValidatorParserListener)listener).enterEqualityOperation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValidatorParserListener ) ((ValidatorParserListener)listener).exitEqualityOperation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValidatorParserVisitor ) return ((ValidatorParserVisitor<? extends T>)visitor).visitEqualityOperation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EqualityOperationContext equalityOperation() throws RecognitionException {
		EqualityOperationContext _localctx = new EqualityOperationContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_equalityOperation);
		try {
			setState(134);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(131);
				numberEqualityOperation();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(132);
				stringEqualityOperation();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(133);
				booleanEqualityOperation();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumberEqualityOperationContext extends ParserRuleContext {
		public Token op;
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public TerminalNode OP_EQUAL() { return getToken(ValidatorParser.OP_EQUAL, 0); }
		public TerminalNode OP_NOT_EQUAL() { return getToken(ValidatorParser.OP_NOT_EQUAL, 0); }
		public NumberEqualityOperationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numberEqualityOperation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValidatorParserListener ) ((ValidatorParserListener)listener).enterNumberEqualityOperation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValidatorParserListener ) ((ValidatorParserListener)listener).exitNumberEqualityOperation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValidatorParserVisitor ) return ((ValidatorParserVisitor<? extends T>)visitor).visitNumberEqualityOperation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NumberEqualityOperationContext numberEqualityOperation() throws RecognitionException {
		NumberEqualityOperationContext _localctx = new NumberEqualityOperationContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_numberEqualityOperation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			((NumberEqualityOperationContext)_localctx).op = _input.LT(1);
			_la = _input.LA(1);
			if ( !(_la==OP_EQUAL || _la==OP_NOT_EQUAL) ) {
				((NumberEqualityOperationContext)_localctx).op = (Token)_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(137);
			number();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StringEqualityOperationContext extends ParserRuleContext {
		public Token op;
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public TerminalNode OP_EQUAL() { return getToken(ValidatorParser.OP_EQUAL, 0); }
		public TerminalNode OP_NOT_EQUAL() { return getToken(ValidatorParser.OP_NOT_EQUAL, 0); }
		public IgnoreCaseContext ignoreCase() {
			return getRuleContext(IgnoreCaseContext.class,0);
		}
		public StringEqualityOperationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stringEqualityOperation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValidatorParserListener ) ((ValidatorParserListener)listener).enterStringEqualityOperation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValidatorParserListener ) ((ValidatorParserListener)listener).exitStringEqualityOperation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValidatorParserVisitor ) return ((ValidatorParserVisitor<? extends T>)visitor).visitStringEqualityOperation(this);
			else return visitor.visitChildren(this);
		}
	}
